# tier4_ad_api_adaptor

./: .pre-commit-config.yaml  build_depends.repos  setup.cfg
.github/: sync-files.yaml
.github/workflows/: pre-commit.yaml  sync-main-for-develop.yml  sync-public-develop.yaml  sync-public.yaml  sync-tier4-universe.yaml
autoware_api_generator/: CMakeLists.txt  autoware_api_generator-extras.cmake  package.xml
autoware_api_generator/cmake/: autoware_api_generate_library.cmake
autoware_api_generator/config/: extra.yaml
autoware_api_generator/resource/: external.yaml  internal.yaml
autoware_api_generator/script/: configure.py
autoware_api_generator/template/cpp/: service.in  topic.in
autoware_api_generator/template/py/: service.in  topic.in
autoware_api_mapping/: CMakeLists.txt  package.xml
autoware_api_mapping/api/: extra.yaml  remap.yaml
autoware_api_utils/: README.md
autoware_external_api_msgs/: CMakeLists.txt  package.xml
autoware_external_api_msgs/msg/: ResponseStatus.msg
autoware_iv_external_api_adaptor/: CMakeLists.txt  package.xml
autoware_iv_external_api_adaptor/src/: calibration_status.cpp  calibration_status.hpp  cpu_usage.cpp  cpu_usage.hpp  diagnostics.cpp  diagnostics.hpp  door.cpp  door.hpp  emergency.cpp  emergency.hpp  engage.cpp  engage.hpp  fail_safe_state.cpp  fail_safe_state.hpp  initial_pose.cpp  initial_pose.hpp  localization_score.cpp  localization_score.hpp  map.cpp  map.hpp  metadata_packages.cpp  metadata_packages.hpp  operator.cpp  operator.hpp  rosbag_logging_mode.cpp  rosbag_logging_mode.hpp  route.cpp  route.hpp  rtc_controller.cpp  rtc_controller.hpp  service.cpp  service.hpp  start.cpp  start.hpp  vehicle_status.cpp  vehicle_status.hpp  velocity.cpp  velocity.hpp  version.cpp  version.hpp
autoware_iv_internal_api_adaptor/: CMakeLists.txt  package.xml
autoware_iv_internal_api_adaptor/launch/: internal_api_relay.launch.xml
autoware_iv_internal_api_adaptor/src/: initial_pose.cpp  initial_pose.hpp  iv_msgs.cpp  iv_msgs.hpp  operator.cpp  operator.hpp  route.cpp  route.hpp  velocity.cpp  velocity.hpp
awapi_awiv_adapter/: CMakeLists.txt  Readme.md  package.xml
awapi_awiv_adapter/include/awapi_awiv_adapter/: awapi_autoware_state_publisher.hpp  awapi_autoware_util.hpp  awapi_awiv_adapter_core.hpp  awapi_lane_change_state_publisher.hpp  awapi_max_velocity_publisher.hpp  awapi_motion_factor_aggregator.hpp  awapi_obstacle_avoidance_state_publisher.hpp  awapi_pacmod_util.hpp  awapi_vehicle_state_publisher.hpp
awapi_awiv_adapter/launch/: awapi_awiv_adapter.launch.xml  awapi_relay_container.launch.py
awapi_awiv_adapter/src/: awapi_autoware_state_publisher.cpp  awapi_autoware_util.cpp  awapi_awiv_adapter_core.cpp  awapi_lane_change_state_publisher.cpp  awapi_max_velocity_publisher.cpp  awapi_motion_factor_aggregator.cpp  awapi_obstacle_avoidance_state_publisher.cpp  awapi_pacmod_util.cpp  awapi_vehicle_state_publisher.cpp
image_base64_converter/: package.xml  setup.cfg  setup.py
image_base64_converter/image_base64_converter/: image_base64_converter.py
image_base64_converter/launch/: image_base64_converter.launch.xml
image_base64_converter/test/: test_copyright.py  test_flake8.py  test_pep257.py
protobuf_mqtt_bridge/: README.md  make.bash  mosquitto.conf  package-lock.json  package.json  package.xml  path.bash  python-path.bash  setup.cfg  setup.py
protobuf_mqtt_bridge/examples/browser/: autoware_protobuf.json  index.html  index.js
protobuf_mqtt_bridge/examples/node/: autoware_protobuf  autoware_protobuf.js  mqtt_listener.js  mqtt_talker.js
protobuf_mqtt_bridge/examples/python/: mqtt_listener.py  mqtt_talker.py
protobuf_mqtt_bridge/examples/ros/: talker_string.py  talker_uint32.py
protobuf_mqtt_bridge/protobuf_mqtt_bridge/: server.py
protobuf_mqtt_bridge/resource/: autoware_protobuf.d.ts  autoware_protobuf.js  autoware_protobuf.json  autoware_protobuf.proto  sample.proto
protobuf_mqtt_bridge/resource/js/: header.js  point.js  pose.js  posestamped.js  quaternion.js  string.js  time.js  uint32.js  uint32.pbjs.js
protobuf_mqtt_bridge/resource/proto/autoware_protobuf/geometry_msgs/msg/: pose_stamped.proto
protobuf_mqtt_bridge/resource/proto/autoware_protobuf/std_msgs/msg/: header.proto  string.proto  time.proto  uint32.proto
protobuf_mqtt_bridge/resource/python/autoware_protobuf/geometry_msgs/msg/: pose_stamped_pb2.py
protobuf_mqtt_bridge/resource/python/autoware_protobuf/std_msgs/msg/: header_pb2.py  string_pb2.py  time_pb2.py  uint32_pb2.py
tier4_prototype_api_launch/: CMakeLists.txt  README.md  package.xml
(+4 files in other folders)
