<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_base64_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="makoto.yabuta@tier4.jp">yabuta</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>autoware_external_api_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
